some cleanups